# tube-feed-manager

./: .dockerignore  .gitignore  README.md  docker-compose.yml  makefile
backend/: .gitignore  Dockerfile  main.py  pyproject.toml  resources.py  schemas.py  services.py  tests.py
database/: Dockerfile  init.sql
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.js  acquisitions.js  index.css  index.js
frontend/src/Pages/: App.js  Find.js  Home.js  Insert.js  Review.js  Update.js
