[tool.poetry]
name = "tube-feed-manager"
version = "0.1.0"
description = "Software to aid management of tube feeds"
authors = ["dessertivore <landau.sophie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
sql = "^2022.4.0"
psycopg = {extras = ["binary"], version = "^3.1.12"}
uvicorn = "^0.23.2"
fastapi = "^0.104.1"
pydantic = "^2.4.2"


[tool.poetry.dev-dependencies]
ruff = "mypy"
black = "^23.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
